syntax = "proto3";
import "gogo.proto";

package balance;
option go_package = "./pkg/transactions/pb";

message Balance {
  int32 id = 1;
  int32 user_id = 2  [(gogoproto.jsontag) = "user_id"];
  int32 type = 3;
  int32 total = 4;
  int32 created_at = 5 [(gogoproto.jsontag) = "created_at"];
  int32 updated_at = 6 [(gogoproto.jsontag) = "updated_at"];
}

message UpsertBalanceRequest {    
  enum ActionType {
    INCREASE = 0;
    DECREASE = 1;
  }
  int32 user_id = 1 [(gogoproto.jsontag) = "user_id"];
  int32 type = 2;
  int32 total = 3;
  ActionType action = 4;
}

message UpsertBalanceResponse {
  int32 status = 1;
  string error = 2;
  int32 id = 3;
  int32 current_balance = 4 [(gogoproto.jsontag) = "current_balance"];
}

message UserBalance {
  int32 type = 1 [(gogoproto.jsontag) = "type"];
  int32 total = 2 [(gogoproto.jsontag) = "total"];
}
message GetUserBalanceRequest {
  int32 user_id = 1;
}

message GetUserBalanceResponse {
  int32 status = 1 [(gogoproto.jsontag) = "status"];
  string error = 2 [(gogoproto.jsontag) = "error"];
  repeated UserBalance balances = 3 [(gogoproto.jsontag) = "balances"];
}

service BalanceService {
  rpc UpsertBalance(UpsertBalanceRequest) returns (UpsertBalanceResponse) {}
  rpc GetUserBalance(GetUserBalanceRequest) returns (GetUserBalanceResponse) {}
}